--- a/src/app/pages/impact-dev/map/testimonial.html
+++ b/src/app/pages/impact-dev/map/testimonial.html
@@ -1,11 +1,11 @@
 <template args="model">
-            <div class="tdlb_container">
-                <div class="tdlb_para">
+            <div class="tdlb-container">
+                <div class="tdlb-para">
                     <div id="testimonialHead-{model.itemIndex}" class="testimonial_he">Testimonials</div>
-                    <div class="para_quote">
+                    <div class="para-quote">
                         <i class="fas fa-quote-left"></i>
                     </div>
-                    <div class="tdl_body_desc">Teaming up with the other OpenStax Institutional Partner schools
+                    <div class="tdl-body-desc">Teaming up with the other OpenStax Institutional Partner schools
                         provided a sense of community as we navigated launching OER initiatives
                         at our own campuses. Learning about other schools’ successes and
                         frustrations each month was inspiring. I learned so many new techniques
@@ -13,13 +13,12 @@
                         the structure of this program.
                     </div>
                 </div>
-                <div class="tdl_body_regards">
-                    <div class="tdlb_regards_name">– Erin Davis</div>
-                    <div class="tdlb_regards_desc">Distance Education Library Services Coordinator</div>
+                <div class="tdl-body-regards">
+                    <div class="tdlb-regards-name">– Erin Davis</div>
+                    <div class="tdlb-regards-desc">Distance Education Library Services Coordinator</div>
                 </div>
             </div>
-        <div class="toggle_dataList_footer">
-            <span class="sub-testimonial">submit your testimonials</span>
-            <span class="sub-testimonial-icon"><i class="fa fa-chevron-right right-angle"></i></span>
+        <div class="toggle-datalist-footer">
+            <span id="sub_testimonial">submit your testimonials</span> >
         </div>
 </template>
