--- a/src/app/pages/impact-dev/map/map.scss
+++ b/src/app/pages/impact-dev/map/map.scss
@@ -37,6 +37,9 @@
             order: 2;
         }
     }
+    .separateMap-link {
+        display: unset;
+    }
     #map {
         position: relative;
         height: 74rem;
