Fix scss errors on schoolmap.scss

--- a/src/app/pages/impact-dev/schoolmap/schoolmap.html
+++ b/src/app/pages/impact-dev/schoolmap/schoolmap.html
@@ -1,15 +1,15 @@
 <template args="model">
     <div class="content">
-        <div class="main_content">
+        <div class="main-content">
             <div class="txthead"> Put your school on the Map </div>
             <div class="txtbdy">
-                    Our prestigious Institutional Partner Program provides guidance for 
-                    increasing the use of open educational resources on your campus. 
+                    Our prestigious Institutional Partner Program provides guidance for
+                    increasing the use of open educational resources on your campus.
             </div>
             <div class="txtlink">
                 <a href="https://openstax.org/"> I want to learn more></a>
             </div>
         </div>
-        <div><img id="map-img" src="/images/home/map2.png"></div>
+        <div><img class="map-img" src="/images/home/map2.png"></div>
     </div>
 </template>
