--- a/src/app/pages/impact-dev/schoolmap/schoolmap.scss
+++ b/src/app/pages/impact-dev/schoolmap/schoolmap.scss
@@ -1,78 +1,71 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-    .schoolmapdiv{
+.schoolmapdiv {
+    background: radial-gradient(circle, rgba(12, 214, 248, 0.35) 0%, rgba(37, 192, 218, 0) 100%);
+    background-color: rgba(255, 255, 255, 0.9);
 
-        background-color: rgba(255,255,255,0.9);	
-        background: radial-gradient(circle, rgba(12, 214, 248, 0.35) 0%, rgba(37, 192, 218, 0) 100%);
-        @include wider-than(60rem) {
-            height: 86rem;
-            overflow: hidden;		
+    @include wider-than(60rem) {
+        height: 86rem;
+        overflow: hidden;
+    }
+
+    @include width-up-to($phone-max) {
+        height: 60rem;
+    }
+}
+
+.content {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.main-content {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 6rem;
+    padding-top: 5rem;
+}
+
+.schoolmapbox {
+   // background-size: 697px 348px ;
+    .txthead {
+        color: #00347c;
+        font-size: 3.6rem;
+        font-weight: bold;
+        letter-spacing: -1.44px;
+        width: 45rem;
+
+        @include width-up-to($phone-max) {
+            line-height: 4rem;
+            text-align: center;
+            width: 30rem;
+        }
+    }
+
+    .txtbdy {
+        color: #00347c;
+        font-size: 1.8rem;
+        padding-bottom: 2rem;
+        padding-top: 2rem;
+        width: 55rem;
+
+        @include width-up-to($phone-max) {
+            font-size: 1.8rem;
+            line-height: 2.5rem;
+            text-align: center;
+            width: 32rem;
+        }
+    }
+
+    .map-img{
+        @include width-up-to($tablet-max) {
+            width: 60rem;
         }
 
         @include width-up-to($phone-max) {
-            height: 60rem; 
+            width: 32rem;
         }
     }
-
-    .content{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .main_content{
-        flex-direction: column;
-        display: flex;
-        align-items: center;
-        padding-top: 5rem;
-        padding-bottom: 6rem;
-    }
-    .schoolmapbox{
-       // background-size: 697px 348px ;
-        @include width-up-to($phone-max) {
-        
-        }
-        @include wider-than($tablet-max) {
-        
-        }
-        @include wider-than(60rem) {
-          
-        }
-
-            .txthead{
-              
-                width: 45rem;	
-                color: #00347C;	
-                font-size: 36px;	
-                font-weight: bold;	
-                letter-spacing: -1.44px;		
-
-                @include width-up-to($phone-max) {
-                    text-align: center;
-                    width: 30rem;
-                    line-height: 40px;
-                }
-            }
-            .txtbdy{
-              
-                width: 55rem;	
-                color: #00347C;	
-                font-size: 18px;	
-                padding-top: 2rem;
-                padding-bottom: 2rem;	
-
-                @include width-up-to($phone-max) {
-                width: 32rem;
-                font-size: 18px;
-                line-height: 25px;
-                text-align: center;
-                }
-            }
-            #map-img{
-                @include width-up-to($tablet-max) {
-                    width: 60rem;
-                }
-                @include width-up-to($phone-max) {
-                    width: 32rem;
-                }
-            }
 }
