--- a/src/app/pages/impact-dev/map/mapdropdown.html
+++ b/src/app/pages/impact-dev/map/mapdropdown.html
@@ -10,7 +10,7 @@
                     <div class="list_address">{element.fields.physical_city}, {element.fields.physical_state_province}</div>
                 </div>
                 <div class="list_show_more">
-                    <i id="icon-{element.pk}" class="fa fa-angle-down angle_circle" aria-hidden="true"></i>
+                    <i id="icon-{element.pk}" class="fa fa-chevron-down angle_circle" aria-hidden="true"></i>
                 </div>
             </div>
             <div id="data-{element.pk}" class="toggle_dataList data-{element.pk}">
