--- a/src/app/pages/separatemap/separatemap.html
+++ b/src/app/pages/separatemap/separatemap.html
@@ -1,5 +1,10 @@
 <template args="model">
         <main id="maincontent" class="hide-until-loaded {model.loaded}">
             <div id="mapd"  class="mapd" skip="true"></div>
+            <div id="backToImpact_div" class="backToImpact_div">
+                <button id="backToImpact_btn" class="backToImpact_btn" href="/impact-dev">
+                        <i class="fa fa-arrow-left left_arrow_bak"></i>
+                </button>
+            </div>
         </main>
 </template>
