--- a/src/app/pages/separatemap/separatemap.scss
+++ b/src/app/pages/separatemap/separatemap.scss
@@ -3,16 +3,44 @@
 .mapd {
     height: 80rem;
     width: 100%;
+
     @include width-up-to($tablet-max) {
         top: 0rem;
     }
+
     @include width-up-to($phone-max) {
         height: 50rem;
     }
-    .mapboxgl-ctrl-bottom-left {
-        display: none;
+}
+
+.backToImpact_btn {
+    border-radius: 2.8rem;
+    background-color: white;
+    box-shadow: 0 1rem 3rem 0 rgba(0,0,0,0.3);
+    height: 4rem;
+    width: 4rem;
+}
+
+.backToImpact_div {
+    position: absolute;
+    right: 6rem;
+    top: 85rem;
+    
+    @include width-up-to($phone-max) {
+        z-index: 99999;
+        right: 2rem;
+        top: 8rem;
     }
-    .mapboxgl-ctrl-bottom-right {
+}
+
+.left_arrow_bak {
+    color: #4a4a4a;
+}
+
+.mapboxgl-ctrl-bottom-left {
         display: none;
-    }
+}
+
+.mapboxgl-ctrl-bottom-right {
+        display: none;
 }
