--- a/src/app/pages/separatemap/separatemap.scss
+++ b/src/app/pages/separatemap/separatemap.scss
@@ -3,15 +3,19 @@
 .mapd {
     height: 80rem;
     width: 100%;
+
     @include width-up-to($tablet-max) {
-        top: 0rem;
+        top: 0;
     }
+
     @include width-up-to($phone-max) {
         height: 50rem;
     }
+
     .mapboxgl-ctrl-bottom-left {
         display: none;
     }
+
     .mapboxgl-ctrl-bottom-right {
         display: none;
     }
